--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,42 @@
-# Dependências
-node_modules/
-vendor/
+# See https://docs.github.com/get-started/getting-started-with-git/ignoring-files for more about ignoring files.
 
-# Arquivos de ambiente
-.env
-.env.local
-.env.*.local
+# Compiled output
+/dist
+/tmp
+/out-tsc
+/bazel-out
 
-# Logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# Node
+/node_modules
+npm-debug.log
+yarn-error.log
 
-# Arquivos do sistema
-.DS_Store
-Thumbs.db
-*.swp
-*.swo
-*~
-
-# Build
-dist/
-build/
-*.min.js
-*.min.css
-
-# IDE
-.vscode/
+# IDEs and editors
 .idea/
-*.sublime-project
+.project
+.classpath
+.c9/
+*.launch
+.settings/
 *.sublime-workspace
 
+# Visual Studio Code
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.history/*
+
+# Miscellaneous
+/.angular/cache
+.sass-cache/
+/connect.lock
+/coverage
+/libpeerconnection.log
+testem.log
+/typings
+
+# System files
+.DS_Store
+Thumbs.db
